--- a/color.html
+++ b/color.html
@@ -12,7 +12,7 @@
   <span>orange</span>
   <p>green</p>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
+  <script src="js/libs/jquery.js"></script>
   <script>
     $(function(){
       //without the "color" plug-in
