--- a/color2.html
+++ b/color2.html
@@ -12,7 +12,7 @@
   <span>orange</span>
   <p>green</p>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
+  <script src="js/libs/jquery.js"></script>
 
   <!-- plug-in extracted to another file -->
   <script src="js/jquery.color.js"></script>
