--- a/konami-code.html
+++ b/konami-code.html
@@ -4,16 +4,21 @@
   <style type="text/css">
     body{
       background-color: black;
-      background-image: url(http://stevecochrane.com/img/2012/02/konami-logo.png);
-      background-repeat: no-repeat;
-      background-position: center 180px;
-      min-height:100%;
+      font-size: 42px;
+    }
+    .konami-logo{
+      display: absolute;
+      top: 10px;
+      left: 10px;
+      color: white;
     }
   </style>
 </head>
 <body>
-  <iframe id="iframeKonamiSong" width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/95406812"></iframe>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
+
+  <div class="konami-logo">KONAMI</div>
+
+  <script src="js/libs/jquery.js"></script>
 
   <!-- plug-in extracted to another file -->
   <script src="js/jquery.konami.js"></script>
@@ -22,14 +27,22 @@
     $(function(){
       $("#iframeKonamiSong").css("display","none");
 
-      $.konami();
+      var konami = new $.Konami();
+      $(window).on("keyup", function(event){
+        konami.checkKonamiCode(event.which);
+      });
+
       $(window).on("konami.success", function(event, params){
-        $("#iframeKonamiSong").css("display","block");
-        console.log(params.keys);
+        console.log("konami.success");
       });
       $(window).on("konami.fail", function(event, params){
-        $("#iframeKonamiSong").css("display","none");
-        console.log(params.keys);
+        console.log("konami.fail");
+      });
+      $(window).on("konami.progress", function(event, params){
+        console.log(params.expected,
+                    params.received,
+                    params.index,
+                    params.isCorret);
       });
     })
   </script>
