sample of code rot

--- a/konami-code.html
+++ b/konami-code.html
@@ -42,6 +42,7 @@
         console.log(params.expected,
                     params.received,
                     params.index,
+                    params.seq,
                     params.isCorret);
       });
     })
