--- a/specs/SpecRunner.html
+++ b/specs/SpecRunner.html
@@ -15,10 +15,10 @@
   <script src="../js/libs/jquery.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="../js/jquery.konami.js"></script>
+  <script type="text/javascript" src="../js/jquery.konamiRot.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="jquery.konami.spec.js"></script>
+  <script type="text/javascript" src="jquery.konamiRot.spec.js"></script>
 
   <script type="text/javascript">
     (function() {
