--- a/index.html
+++ b/index.html
@@ -8,15 +8,24 @@
     <link rel="stylesheet" href="stylesheets/core.css" media="screen"/>
     <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"/>
     <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
+    <style type="text/css">
+      body{
+        background-color: black;
+      }
+      .konami-logo{
+        font-size: 42px;
+        color: white;
+      }
+      .description{
+        font-size: 24px;
+        color: #eee;
+      }
+      .record{
+        font-size: 18px;
+        color: #efe;
+      }
+    </style>
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
     <title>konami-code by saitodisse</title>
   </head>
 
@@ -35,28 +44,20 @@
         </span>
       </header>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/saitodisse/jQueryPluginTests/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/saitodisse/jQueryPluginTests/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
-
-
       <span class="banner-fix"></span>
-
 
       <section id="main_content">
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+  <div class="konami-logo">KONAMI</div>
+  <div class="description"></div>
+  <div class="record"></div>
+  <button>Disable Konami Code</button>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>Konami Code:</p>
+<pre><code>UP, UP, DOWN, DOWN, LEFT, RIGHT, LEFT, RIGHT, B, A, START</code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
@@ -93,6 +94,67 @@ $ git checkout gh-pages
 
     </div>
 
-    
+  <!-- plug-in extracted to another file -->
+  <script type="text/javascript" src="javascripts/modernizr.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+  <script type="text/javascript" src="js/jquery.konami.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function () {
+      $('#main_content').headsmart();
+
+      $.konami();
+
+      var record;
+
+      var logRecord = function(executedTime){
+        if(record === undefined){
+          record = executedTime;
+        }
+        else if(executedTime < record){
+          record = executedTime;
+        }
+
+        $(".record").text("Your record: " + record + "ms");
+      }
+
+      $(window).on("konami.success", function(event, params){
+        console.log("konami.success");
+        $(".konami-logo").css("color", "green");
+        logRecord(params.executedTime);
+        $(".description").text(params.executedTime + "ms");
+      });
+
+      $(window).on("konami.fail", function(event, params){
+        $(".konami-logo").css("color", "red");
+        console.log("konami.fail");
+      });
+
+      $(window).on("konami.progress", function(event, params){
+        $(".konami-logo").css("color", "white");
+        console.log(params.expected,
+                    params.received,
+                    params.index);
+      });
+
+      $(window).on("konami.enabled", function(){
+          $("button").text("Disable Konami Code");
+      });
+
+      $(window).on("konami.disabled", function(){
+          $("button").text("Enable Konami Code");
+      });
+
+      $("button").click(function(){
+        if($(this).text() === "Disable Konami Code"){
+          $.konami.off();
+        }
+        else{
+          $.konami();
+        }
+
+      });
+    })
+  </script>
   </body>
 </html>
