--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@ B, A, START</code></pre>
           <span class="right-tail"></span>
         </span>
         <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <p>code learned at <a href="http://howtocode.com.br/cursos/jquery">"jQuery: Dominando o framework"</a> javascript course at </p>
+        <a href="/">
+          <img src="/assets/logo-755a8f0f79d91f9589bf465e10852e3a.png" alt="HOWTO: workshops e e-books para geeks.">
+        </a>
         <span class="octocat"></span>
       </footer>
 
