--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ B, A, START</code></pre>
 
   <!-- plug-in extracted to another file -->
   <script type="text/javascript" src="javascripts/modernizr.js"></script>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
   <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
   <script type="text/javascript" src="javascripts/jquery.konami.js"></script>
   <script type="text/javascript" src="javascripts/index.js"></script>
