--- a/beginHere.html
+++ b/beginHere.html
@@ -7,5 +7,7 @@
   <br />
   <a href="javascripts/specs/SpecRunner.html">SpecRunner.html</a>
   <br />
+  <a href="javascripts/specs/sandbox.html">sandbox.html</a>
+  <br />
 </body>
 </html>
