--- a/javascripts/specs/sandbox.html
+++ b/javascripts/specs/sandbox.html
@@ -6,11 +6,13 @@
   <div>
     <p>textarea1</p>
     <textarea id="textarea1"></textarea>
-    <button id="disableKonami1">disable textarea1</button>
+    <button id="enableKonami1">enable konami 1</button>
+    <button id="disableKonami1">disable konami 1</button>
 
     <p>textarea2 (without event.stopPropagation -> see console)</p>
     <textarea id="textarea2"></textarea>
-    <button id="disableKonami2">disable textarea2</button>
+    <button id="enableKonami2">enable konami 2</button>
+    <button id="disableKonami2">disable konami 2</button>
   </div>
 
   <script type="text/javascript" src="../../bower_components/jquery/jquery.js"></script>
@@ -20,38 +22,42 @@
 
       var   ta1 = $("#textarea1")
           , ta2 = $("#textarea2")
-          , btn1 = $("#disableKonami1")
-          , btn2 = $("#disableKonami2")
+          , btnEnable1 = $("#enableKonami1")
+          , btnEnable2 = $("#enableKonami2")
+          , btnDisable1 = $("#disableKonami1")
+          , btnDisable2 = $("#disableKonami2")
           , konami1
           , konami2
       ;
 
-      btn1.click(function(){
-        konami1.konami.off();
+
+      btnEnable1.click(function(){
+        ta1.konami(); //thats is not working
       });
-      btn2.click(function(){
-        konami2.konami.off();
+      btnEnable2.click(function(){
+        ta2.konami();
+      });
+      btnDisable1.click(function(){
+        ta1.konami.off(); //thats is not working
+      });
+      btnDisable2.click(function(){
+        ta2.konami.off();
       });
 
-      ta1.on("konami.enabled", function(){console.log("#textarea1.konami.enabled")});
-      ta2.on("konami.enabled", function(){console.log("#textarea2.konami.enabled")});
+      ta1.on("konami.enabled", function() {console.log("#textarea1.konami.enabled")});
+      ta2.on("konami.enabled", function() {console.log("#textarea2.konami.enabled")});
       ta1.on("konami.disabled", function(){console.log("#textarea1.konami.disabled")});
       ta2.on("konami.disabled", function(){console.log("#textarea2.konami.disabled")});
 
       konami1 = ta1.konami();
-      console.log("==>konami1", konami1);
+      konami2 = ta2.konami();
 
       ta1.on("konami.keyup", function(ev, opt){
         ev.stopPropagation();
         console.log("#textarea1 ==> konami.keyup ==> ", opt.which)
       });
-
-      konami2 = ta2.konami();
-      console.log("==>konami1", konami1);
-      console.log("==>konami2", konami2);
-
       ta2.on("konami.keyup", function(ev, opt){
-        //ev.stopPropagation();
+        ev.stopPropagation();
         console.log("#textarea2 ==> konami.keyup ==> ", opt.which)
       });
 
