--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
     <link rel="stylesheet" href="stylesheets/index.css"/>
 
-    <title>konami-code by saitodisse</title>
+    <title>Typing Skill Training by saitodisse</title>
   </head>
 
   <body>
@@ -20,8 +20,8 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>konami-code</h1>
-            <h2>konami-code, konami</h2>
+            <h1>Typing Skill Training</h1>
+            <h2>typing, training, keyboard</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
@@ -33,10 +33,10 @@
         <br>
         <br>
         <h3>
-          <div class="konami-logo">KONAMI</div>
+          <div class="typingSkillTraining-logo">KONAMI</div>
           <div class="description">Start pressing your keys now...</div>
           <div class="record"></div>
-          <button>Disable Konami Code</button>
+          <button>Disable TypingSkillTraining Code</button>
 
           <pre><code>UP, UP, DOWN, DOWN,
 LEFT, RIGHT, LEFT, RIGHT,
@@ -64,7 +64,7 @@ B, A, START</code></pre>
   <script type="text/javascript" src="javascripts/modernizr.js"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
   <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-  <script type="text/javascript" src="javascripts/jquery.konami.js"></script>
+  <script type="text/javascript" src="javascripts/jquery.typingSkillTraining.js"></script>
   <script type="text/javascript" src="javascripts/index.js"></script>
   </body>
 </html>
