--- a/javascripts/specs/SpecRunner.html
+++ b/javascripts/specs/SpecRunner.html
@@ -15,10 +15,10 @@
 
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="jquery.konami.spec.js"></script>
+  <script type="text/javascript" src="jquery.typingSkillTraining.spec.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="../jquery.konami.js"></script>
+  <script type="text/javascript" src="../jquery.typingSkillTraining.js"></script>
 
   <script type="text/javascript">
     (function() {
