off() is working now

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <br>
         <br>
         <h3>
-          <div class="typingSkillTraining-logo">KONAMI</div>
+          <div class="typingSkillTraining-logo">KONAMI CODE</div>
+          <div class="keysPressed"></div>
           <div class="description">Start pressing your keys now...</div>
           <div class="record"></div>
-          <button>Disable TypingSkillTraining Code</button>
 
           <pre><code>UP, UP, DOWN, DOWN,
 LEFT, RIGHT, LEFT, RIGHT,
