--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
   <!--<script type="text/javascript" src="javascripts/index.js"></script>-->
 
   <script type="text/javascript" src="javascripts/konami.js"></script>
+  <script type="text/javascript" src="javascripts/konami.target.js"></script>
+  <script type="text/javascript" src="javascripts/konami.typingComponent.js"></script>
   <script type="text/javascript" src="javascripts/konami.loading.js"></script>
   <script type="text/javascript" src="javascripts/konami.container.js"></script>
   <script type="text/javascript" src="javascripts/konami.boot.js"></script>
