fixed some links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="loading">Loading</div>
     <div class="container hidden">
-      <a id="forkme_banner" href="https://github.com/saitodisse/jQueryPluginTests">View on GitHub</a>
+      <a id="forkme_banner" href="https://github.com/saitodisse/typing-skill-training">View on GitHub</a>
       <div class="shell">
 
         <header>
@@ -47,14 +47,14 @@
         <footer>
           <span class="ribbon-outer">
             <span class="ribbon-inner">
-              <p>this project by <a href="https://github.com/saitodisse">saitodisse</a> can be found on <a href="https://github.com/saitodisse/jQueryPluginTests">GitHub</a></p>
+              <p>this project by <a href="https://github.com/saitodisse">saitodisse</a> can be found on <a href="https://github.com/saitodisse/typing-skill-training">GitHub</a></p>
             </span>
             <span class="left-tail"></span>
             <span class="right-tail"></span>
           </span>
           <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
           <p>code learned at <a href="http://howtocode.com.br/cursos/jquery">"jQuery: Dominando o framework"</a> javascript course at </p>
-          <a href="/">
+          <a href="http://howtocode.com.br/">
             <img src="/assets/logo-755a8f0f79d91f9589bf465e10852e3a.png" alt="HOWTO: workshops e e-books para geeks.">
           </a>
           <span class="octocat"></span>
