--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
   <script type="text/javascript" src="javascripts/jquery.typingSkillTraining.js"></script>
   <!--<script type="text/javascript" src="javascripts/index.js"></script>-->
 
-  <script type="text/javascript" src="javascripts/konami.js"></script>
-  <script type="text/javascript" src="javascripts/konami.target.js"></script>
-  <script type="text/javascript" src="javascripts/konami.typingComponent.js"></script>
-  <script type="text/javascript" src="javascripts/konami.loading.js"></script>
-  <script type="text/javascript" src="javascripts/konami.container.js"></script>
-  <script type="text/javascript" src="javascripts/konami.boot.js"></script>
+  <script type="text/javascript" src="javascripts/konami/konami.js"></script>
+  <script type="text/javascript" src="javascripts/konami/konami.target.js"></script>
+  <script type="text/javascript" src="javascripts/konami/konami.typingComponent.js"></script>
+  <script type="text/javascript" src="javascripts/konami/konami.loading.js"></script>
+  <script type="text/javascript" src="javascripts/konami/konami.container.js"></script>
+  <script type="text/javascript" src="javascripts/konami/konami.boot.js"></script>
 
   </body>
 </html>
